src/test/error/prototype.lns
class Test {
   fn func(); // error
}
